[package]
name = "pallet-datetime-scheduler"
version = "4.0.0-dev"
authors = ["Konrad Sosnowski <sosnowski.konrad@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/konrads/substrate"
repository = "https://github.com/konrads/substrate"
description = "FRAME DateTime Scheduler pallet"
readme = "README.md"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
log = { version = "0.4.16", default-features = false }
sp-std = { version = "4.0.0", default-features = false, path = "../../primitives/std" }
sp-io = { version = "6.0.0", default-features = false, path = "../../primitives/io" }

sp-runtime = { version = "6.0.0", default-features = false, path = "../../primitives/runtime" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true }

chrono-light = { version = "0.1.0", default-features = false, features = ["no_std"] }

[dev-dependencies]
sp-core = { version = "6.0.0", path = "../../primitives/core", default-features = false }
substrate-test-utils = { version = "4.0.0-dev", path = "../../test-utils" }
pallet-preimage = { version = "4.0.0-dev", path = "../preimage" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"log/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-system/std",
	"frame-support/std",
	"frame-benchmarking/std",
]
try-runtime = ["frame-support/try-runtime"]
