[package]
name = "pallet-scheduler-datetime"
version = "4.0.0-dev"
authors = ["Konrad Sosnowski <sosnowski.konrad@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/konrads/substrate"
repository = "https://github.com/konrads/substrate"
description = "FRAME DateTime Scheduler pallet"
readme = "README.md"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
sp-std = { version = "4.0.0", default-features = false, path = "../../primitives/std" }
sp-io = { version = "6.0.0", default-features = false, path = "../../primitives/io" }

sp-runtime = { version = "6.0.0", default-features = false, path = "../../primitives/runtime" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, path = "../timestamp" }
chrono-light = { git="https://github.com/konrads/chrono-light.git", rev="1f5d85bcbd8fefcc59a549d466d88d6dd2daa920", default-features = false, features = ["scale"] }
# chrono-light = { version = "0.1.4", default-features = false, features = ["scale"] }

[dev-dependencies]
sp-core = { version = "6.0.0", path = "../../primitives/core", default-features = false }
substrate-test-utils = { version = "4.0.0-dev", path = "../../test-utils" }
pallet-preimage = { version = "4.0.0-dev", path = "../preimage" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"log/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-system/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"pallet-timestamp/std",
	"chrono-light/std"
]
try-runtime = ["frame-support/try-runtime"]
